--- a/ScalaAssignment3.ipynb
+++ b/ScalaAssignment3.ipynb
@@ -10,7 +10,7 @@
     "#Z23561522\n",
     "#Assignment #3\n",
     "#Problem #2\n",
-    "# Google Colab link "
+    "# Google Colab link https://drive.google.com/file/d/13qX5XVahKM-T2Ji0C4Y1ayfJhT2nm487/view?usp=sharing"
    ]
   },
   {
